# backend/api/docs/swagger.json
@@ -414,6 +414,63 @@
                 }
             }
         },
+        "/tags/search": {
+            "get": {
+                "description": "Get paginated tags matching a name query",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tags"
+                ],
+                "summary": "Search tags by name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search query",
+                        "name": "q",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 20,
+                        "description": "Page size",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ttt-project_ttt_v5_backend_internal_domain_dto.TagListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ttt-project_ttt_v5_backend_internal_domain_dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ttt-project_ttt_v5_backend_internal_domain_dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/tags/{tagId}": {
             "get": {
                 "description": "Get a single tag by its ID",
@@ -651,6 +708,17 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "ttt-project_ttt_v5_backend_internal_domain_dto.TagListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ttt-project_ttt_v5_backend_internal_domain_dto.TagResponse"
+                    }
                 }
             }
         },
